# mlflow-demo

./: .gitignore  evaluate.py  pyproject.toml
src/mlflow_demo/: train.py
src/mlflow_demo/models/: train_linear.py  train_nn.py  train_xgboost.py
